{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 9,
  "lineage": "a16ff9c8-368a-f1d1-39b1-2d2e3b8b5da3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a168a39d07b0c3ea",
            "owner_id": "279957820417",
            "tags": {
              "Name": "elasticache-tutorial"
            },
            "vpc_id": "vpc-0590938d50f3b0b02"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a168a39d07b0c3ea",
            "id": "r-rtb-0ab7b844e90a463c61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ab7b844e90a463c6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:279957820417:security-group/sg-0c3f6a2a99c360b05",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3f6a2a99c360b05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "elasticache-tutorial20191006112202969900000001",
            "name_prefix": "elasticache-tutorial",
            "owner_id": "279957820417",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0590938d50f3b0b02"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:279957820417:subnet/subnet-0c2408461db2a90cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0c2408461db2a90cb",
            "map_public_ip_on_launch": true,
            "owner_id": "279957820417",
            "tags": {
              "Name": "elasticache-tutorial"
            },
            "vpc_id": "vpc-0590938d50f3b0b02"
          },
          "depends_on": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:279957820417:subnet/subnet-0d60670cac75ef255",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0d60670cac75ef255",
            "map_public_ip_on_launch": true,
            "owner_id": "279957820417",
            "tags": {
              "Name": "elasticache-tutorial"
            },
            "vpc_id": "vpc-0590938d50f3b0b02"
          },
          "depends_on": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:279957820417:vpc/vpc-0590938d50f3b0b02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-06e1c799696133fd0",
            "default_route_table_id": "rtb-0ab7b844e90a463c6",
            "default_security_group_id": "sg-0f796c20261825af5",
            "dhcp_options_id": "dopt-085bb572",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0590938d50f3b0b02",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ab7b844e90a463c6",
            "owner_id": "279957820417",
            "tags": {
              "Name": "elasticache-tutorial"
            }
          }
        }
      ]
    }
  ]
}